--- a/Wizcard/Wizcard/Controllers/OnBoarding/Base.lproj/Onboarding.storyboard
+++ b/Wizcard/Wizcard/Controllers/OnBoarding/Base.lproj/Onboarding.storyboard
@@ -320,11 +320,12 @@ of you before you event extend your hand.</string>
         <scene sceneID="34G-DQ-bLJ">
             <objects>
                 <navigationController id="NnH-Oe-e65" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WuF-An-Yjy">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" backIndicatorImage="backArrowBlack" id="WuF-An-Yjy">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.19215686269999999" green="0.23921568630000001" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textColor" red="0.19215686269999999" green="0.23921568630000001" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1723,6 +1724,7 @@ business card</string>
     <resources>
         <image name="addPhoto" width="31" height="31"/>
         <image name="addyourbusinesscard" width="53" height="53"/>
+        <image name="backArrowBlack" width="19" height="33"/>
         <image name="clouds" width="375" height="332"/>
         <image name="create your profile" width="198" height="97"/>
         <image name="createProfilePlaceholder" width="100" height="100"/>
